seaqt/QtCore/gen_qstringview.nim

import ./qtcore_pkg

{.push raises: [].}

from system/ansi_c import c_free, c_malloc

type
  struct_seaqt_string {.used.} = object
    len: csize_t
    data: pointer

  struct_seaqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_seaqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: struct_seaqt_string): string {.used.} =
  if v.len > 0:
    let len = cast[int](v.len)
    result = newStringUninit(len)
    when nimvm:
      let d = cast[ptr UncheckedArray[char]](v.data)
      for i in 0..<len:
        result[i] = d[i]
    else:
      copyMem(addr result[0], v.data, len)


import ./gen_qstringview_types
export gen_qstringview_types

import
  ./gen_qchar_types,
  ./gen_qregularexpression_types
export
  gen_qchar_types,
  gen_qregularexpression_types

type cQStringView*{.exportc: "QStringView", incompleteStruct.} = object

proc fcQStringView_toString(self: pointer): struct_seaqt_string {.importc: "QStringView_toString".}
proc fcQStringView_size(self: pointer): int64 {.importc: "QStringView_size".}
proc fcQStringView_data(self: pointer): pointer {.importc: "QStringView_data".}
proc fcQStringView_constData(self: pointer): pointer {.importc: "QStringView_constData".}
proc fcQStringView_operatorSubscript(self: pointer, n: int64): pointer {.importc: "QStringView_operatorSubscript".}
proc fcQStringView_toLatin1(self: pointer): struct_seaqt_string {.importc: "QStringView_toLatin1".}
proc fcQStringView_toUtf8(self: pointer): struct_seaqt_string {.importc: "QStringView_toUtf8".}
proc fcQStringView_toLocal8Bit(self: pointer): struct_seaqt_string {.importc: "QStringView_toLocal8Bit".}
proc fcQStringView_toUcs4(self: pointer): struct_seaqt_array {.importc: "QStringView_toUcs4".}
proc fcQStringView_at(self: pointer, n: int64): pointer {.importc: "QStringView_at".}
proc fcQStringView_truncate(self: pointer, n: int64): void {.importc: "QStringView_truncate".}
proc fcQStringView_chop(self: pointer, n: int64): void {.importc: "QStringView_chop".}
proc fcQStringView_compare_QChar(self: pointer, c: pointer): cint {.importc: "QStringView_compare_QChar".}
proc fcQStringView_compare_QChar_Qt_CaseSensitivity(self: pointer, c: pointer, cs: cint): cint {.importc: "QStringView_compare_QChar_Qt_CaseSensitivity".}
proc fcQStringView_startsWith_QChar(self: pointer, c: pointer): bool {.importc: "QStringView_startsWith_QChar".}
proc fcQStringView_startsWith_QChar_Qt_CaseSensitivity(self: pointer, c: pointer, cs: cint): bool {.importc: "QStringView_startsWith_QChar_Qt_CaseSensitivity".}
proc fcQStringView_endsWith_QChar(self: pointer, c: pointer): bool {.importc: "QStringView_endsWith_QChar".}
proc fcQStringView_endsWith_QChar_Qt_CaseSensitivity(self: pointer, c: pointer, cs: cint): bool {.importc: "QStringView_endsWith_QChar_Qt_CaseSensitivity".}
proc fcQStringView_indexOf_QChar(self: pointer, c: pointer): int64 {.importc: "QStringView_indexOf_QChar".}
proc fcQStringView_contains_QChar(self: pointer, c: pointer): bool {.importc: "QStringView_contains_QChar".}
proc fcQStringView_count_QChar(self: pointer, c: pointer): int64 {.importc: "QStringView_count_QChar".}
proc fcQStringView_lastIndexOf_QChar(self: pointer, c: pointer): int64 {.importc: "QStringView_lastIndexOf_QChar".}
proc fcQStringView_lastIndexOf_QCharQsizetype(self: pointer, c: pointer, fromVal: int64): int64 {.importc: "QStringView_lastIndexOf_QChar_qsizetype".}
proc fcQStringView_indexOf_QRegularExpression(self: pointer, re: pointer): int64 {.importc: "QStringView_indexOf_QRegularExpression".}
proc fcQStringView_lastIndexOf_QRegularExpressionQsizetype(self: pointer, re: pointer, fromVal: int64): int64 {.importc: "QStringView_lastIndexOf_QRegularExpression_qsizetype".}
proc fcQStringView_contains_QRegularExpression(self: pointer, re: pointer): bool {.importc: "QStringView_contains_QRegularExpression".}
proc fcQStringView_count_QRegularExpression(self: pointer, re: pointer): int64 {.importc: "QStringView_count_QRegularExpression".}
proc fcQStringView_isRightToLeft(self: pointer): bool {.importc: "QStringView_isRightToLeft".}
proc fcQStringView_isValidUtf16(self: pointer): bool {.importc: "QStringView_isValidUtf16".}
proc fcQStringView_toShort(self: pointer): cshort {.importc: "QStringView_toShort".}
proc fcQStringView_toUShort(self: pointer): cushort {.importc: "QStringView_toUShort".}
proc fcQStringView_toInt(self: pointer): cint {.importc: "QStringView_toInt".}
proc fcQStringView_toUInt(self: pointer): cuint {.importc: "QStringView_toUInt".}
proc fcQStringView_toLong(self: pointer): clong {.importc: "QStringView_toLong".}
proc fcQStringView_toULong(self: pointer): culong {.importc: "QStringView_toULong".}
proc fcQStringView_toLongLong(self: pointer): clonglong {.importc: "QStringView_toLongLong".}
proc fcQStringView_toULongLong(self: pointer): culonglong {.importc: "QStringView_toULongLong".}
proc fcQStringView_toFloat(self: pointer): float32 {.importc: "QStringView_toFloat".}
proc fcQStringView_toDouble(self: pointer): float64 {.importc: "QStringView_toDouble".}
proc fcQStringView_begin(self: pointer): pointer {.importc: "QStringView_begin".}
proc fcQStringView_endX(self: pointer): pointer {.importc: "QStringView_end".}
proc fcQStringView_cbegin(self: pointer): pointer {.importc: "QStringView_cbegin".}
proc fcQStringView_cend(self: pointer): pointer {.importc: "QStringView_cend".}
proc fcQStringView_empty(self: pointer): bool {.importc: "QStringView_empty".}
proc fcQStringView_front(self: pointer): pointer {.importc: "QStringView_front".}
proc fcQStringView_back(self: pointer): pointer {.importc: "QStringView_back".}
proc fcQStringView_constBegin(self: pointer): pointer {.importc: "QStringView_constBegin".}
proc fcQStringView_constEnd(self: pointer): pointer {.importc: "QStringView_constEnd".}
proc fcQStringView_isNull(self: pointer): bool {.importc: "QStringView_isNull".}
proc fcQStringView_isEmpty(self: pointer): bool {.importc: "QStringView_isEmpty".}
proc fcQStringView_length(self: pointer): int64 {.importc: "QStringView_length".}
proc fcQStringView_first(self: pointer): pointer {.importc: "QStringView_first".}
proc fcQStringView_last(self: pointer): pointer {.importc: "QStringView_last".}
proc fcQStringView_indexOf_QCharQsizetype(self: pointer, c: pointer, fromVal: int64): int64 {.importc: "QStringView_indexOf_QChar_qsizetype".}
proc fcQStringView_indexOf_QCharQsizetype_Qt_CaseSensitivity(self: pointer, c: pointer, fromVal: int64, cs: cint): int64 {.importc: "QStringView_indexOf_QChar_qsizetype_Qt_CaseSensitivity".}
proc fcQStringView_contains_QChar_Qt_CaseSensitivity(self: pointer, c: pointer, cs: cint): bool {.importc: "QStringView_contains_QChar_Qt_CaseSensitivity".}
proc fcQStringView_count_QChar_Qt_CaseSensitivity(self: pointer, c: pointer, cs: cint): int64 {.importc: "QStringView_count_QChar_Qt_CaseSensitivity".}
proc fcQStringView_lastIndexOf_QChar_Qt_CaseSensitivity(self: pointer, c: pointer, cs: cint): int64 {.importc: "QStringView_lastIndexOf_QChar_Qt_CaseSensitivity".}
proc fcQStringView_lastIndexOf_QCharQsizetype_Qt_CaseSensitivity(self: pointer, c: pointer, fromVal: int64, cs: cint): int64 {.importc: "QStringView_lastIndexOf_QChar_qsizetype_Qt_CaseSensitivity".}
proc fcQStringView_indexOf_QRegularExpressionQsizetype(self: pointer, re: pointer, fromVal: int64): int64 {.importc: "QStringView_indexOf_QRegularExpression_qsizetype".}
proc fcQStringView_indexOf_QRegularExpressionQsizetype_QRegularExpressionMatch(self: pointer, re: pointer, fromVal: int64, rmatch: pointer): int64 {.importc: "QStringView_indexOf_QRegularExpression_qsizetype_QRegularExpressionMatch".}
proc fcQStringView_lastIndexOf_QRegularExpressionQsizetype_QRegularExpressionMatch(self: pointer, re: pointer, fromVal: int64, rmatch: pointer): int64 {.importc: "QStringView_lastIndexOf_QRegularExpression_qsizetype_QRegularExpressionMatch".}
proc fcQStringView_contains_QRegularExpression_QRegularExpressionMatch(self: pointer, re: pointer, rmatch: pointer): bool {.importc: "QStringView_contains_QRegularExpression_QRegularExpressionMatch".}
proc fcQStringView_toShortOk(self: pointer, ok: ptr bool): cshort {.importc: "QStringView_toShort_ok".}
proc fcQStringView_toShortOkBase(self: pointer, ok: ptr bool, base: cint): cshort {.importc: "QStringView_toShort_ok_base".}
proc fcQStringView_toUShortOk(self: pointer, ok: ptr bool): cushort {.importc: "QStringView_toUShort_ok".}
proc fcQStringView_toUShortOkBase(self: pointer, ok: ptr bool, base: cint): cushort {.importc: "QStringView_toUShort_ok_base".}
proc fcQStringView_toIntOk(self: pointer, ok: ptr bool): cint {.importc: "QStringView_toInt_ok".}
proc fcQStringView_toIntOkBase(self: pointer, ok: ptr bool, base: cint): cint {.importc: "QStringView_toInt_ok_base".}
proc fcQStringView_toUIntOk(self: pointer, ok: ptr bool): cuint {.importc: "QStringView_toUInt_ok".}
proc fcQStringView_toUIntOkBase(self: pointer, ok: ptr bool, base: cint): cuint {.importc: "QStringView_toUInt_ok_base".}
proc fcQStringView_toLongOk(self: pointer, ok: ptr bool): clong {.importc: "QStringView_toLong_ok".}
proc fcQStringView_toLongOkBase(self: pointer, ok: ptr bool, base: cint): clong {.importc: "QStringView_toLong_ok_base".}
proc fcQStringView_toULongOk(self: pointer, ok: ptr bool): culong {.importc: "QStringView_toULong_ok".}
proc fcQStringView_toULongOkBase(self: pointer, ok: ptr bool, base: cint): culong {.importc: "QStringView_toULong_ok_base".}
proc fcQStringView_toLongLongOk(self: pointer, ok: ptr bool): clonglong {.importc: "QStringView_toLongLong_ok".}
proc fcQStringView_toLongLongOkBase(self: pointer, ok: ptr bool, base: cint): clonglong {.importc: "QStringView_toLongLong_ok_base".}
proc fcQStringView_toULongLongOk(self: pointer, ok: ptr bool): culonglong {.importc: "QStringView_toULongLong_ok".}
proc fcQStringView_toULongLongOkBase(self: pointer, ok: ptr bool, base: cint): culonglong {.importc: "QStringView_toULongLong_ok_base".}
proc fcQStringView_toFloatOk(self: pointer, ok: ptr bool): float32 {.importc: "QStringView_toFloat_ok".}
proc fcQStringView_toDoubleOk(self: pointer, ok: ptr bool): float64 {.importc: "QStringView_toDouble_ok".}
proc fcQStringView_new(): ptr cQStringView {.importc: "QStringView_new".}

proc toString*(self: gen_qstringview_types.QStringView): string =
  let v_ms = fcQStringView_toString(self.h)
  let vx_ret = string.fromBytes(v_ms)
  c_free(v_ms.data)
  vx_ret

proc size*(self: gen_qstringview_types.QStringView): int64 =
  fcQStringView_size(self.h)

proc data*(self: gen_qstringview_types.QStringView): gen_qchar_types.QChar =
  gen_qchar_types.QChar(h: fcQStringView_data(self.h), owned: false)

proc constData*(self: gen_qstringview_types.QStringView): gen_qchar_types.QChar =
  gen_qchar_types.QChar(h: fcQStringView_constData(self.h), owned: false)

proc operatorSubscript*(self: gen_qstringview_types.QStringView, n: int64): gen_qchar_types.QChar =
  gen_qchar_types.QChar(h: fcQStringView_operatorSubscript(self.h, n), owned: true)

proc toLatin1*(self: gen_qstringview_types.QStringView): seq[byte] =
  var v_bytearray = fcQStringView_toLatin1(self.h)
  var vx_ret = @(toOpenArray(cast[ptr UncheckedArray[byte]](v_bytearray.data), 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc toUtf8*(self: gen_qstringview_types.QStringView): seq[byte] =
  var v_bytearray = fcQStringView_toUtf8(self.h)
  var vx_ret = @(toOpenArray(cast[ptr UncheckedArray[byte]](v_bytearray.data), 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc toLocal8Bit*(self: gen_qstringview_types.QStringView): seq[byte] =
  var v_bytearray = fcQStringView_toLocal8Bit(self.h)
  var vx_ret = @(toOpenArray(cast[ptr UncheckedArray[byte]](v_bytearray.data), 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret
